# strutil

./: .gitignore  CMakeLists.txt  CODE_REVIEW.md  IMPLEMENTATION_STATUS.md  Makefile  README.md
include/: strutil.h  test_strutil.h
src/: main.c  strutil.c  test_strutil.c
